# holdr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.toml
examples/: example-com.db
scripts/: run-format  test_holdr
src/: CMakeLists.txt  main.c
src/core/: dns_db.c  dns_db.h  dns_packet.c  dns_packet.h  server.c  server.h
src/loaders/: config.c  config.h  parser.c  parser.h
src/structures/list/: array_list.c  array_list.h  double_linked_list.c  double_linked_list.h  double_linked_list_node.c  double_linked_list_node.h
src/structures/table/: hash_table.c  hash_table.h  hash_table_node.c  hash_table_node.h  mersenne_twister.c  mersenne_twister.h  murmur_hash.c  murmur_hash.h
src/structures/tree/: red_black_tree.c  red_black_tree.h  red_black_tree_node.c  red_black_tree_node.h  trie.c  trie.h  trie_node.c  trie_node.h
src/utils/: file_reader.c  file_reader.h  macros.h  prints.c  prints.h  strings.c  strings.h
tests/: CMakeLists.txt
tests/core/: dns_db.test.c  dns_packet.test.c  example-com.db
tests/loaders/: parser.test.c  zone_file.txt
tests/structures/list/: array_list.test.c  double_linked_list.test.c
tests/structures/tree/: trie.test.c
tests/utils/: file_reader.test.c  strings.test.c
